# satellites

./: CMakeLists.txt  common.pri  genWeb.pro  new_results.txt  reg-6.txt
data/grids/: areas_80000.txt  cells_80000.txt  centroids_5000.txt  centroids_80000.txt  nodes_80000.txt  russia_5000.txt
src/: cuda_surface.cu  cuda_surface.cuh  cudatest.cpp  cudatest.h  earth.h  examples.cpp  examples.h  grid.cpp  grid.h  main.cpp  mathstuff.cpp  mathstuff.h  messages.h  opt.h  orbits.cpp  orbits.h  satellitesurface.cpp  satellitesurface.h  settings.cpp  settings.h  stuff.cpp  stuff.h  surface.cpp  surface.h  swarm.cpp  swarm.h
src/genWeb/: earth.h  examples.cpp  grid.cpp  grid.h  main.cpp  mathstuff.cpp  messages.cpp  messages.h  opt.h  orbits.cpp  orbits.h  satellitesurface.cpp  satellitesurface.h  settings.cpp  settings.h  swarm.cpp  swarm.h
